--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,7 @@
       </a>
 
       <div class="trigger">
-        <a class="page-link" href="{{ '/about' | prepend: site.baseurl }}">About</a>
-        <a class="page-link" href="{{ '/articles' | prepend: site.baseurl }}">Articles</a>
+        <a class="page-link" href="{{ '/articles/' | prepend: site.baseurl }}">Articles</a>
       </div>
     </nav>
 
